@@ -1,5 +1,6 @@
 0.45: (in development)
 	+ New icons for tweet editor
+	* Shortened images preview is now fixed
 
 0.44:
 	* Nothing changed, just for WebStore to pass
